<resources>
    <string name="app_name">宝甄网</string>
    <string name="toolbar_title"></string>
    <string name="guide_now">即刻启程</string>

    <string name="home_art_soft">艺术软装</string>
    <string name="home_new_goods">上新啦</string>
    <string name="home_hot_category">热门标签</string>
    <string name="home_hot_video">热门视频</string>
    <string name="home_tab">艺笔艺画</string>
    <string name="home_artist">艺术咖</string>
    <string name="view_all">查看全部</string>

    <string name="browse_count">%1$s人浏览</string>
    <string name="attention_count">%1$s位关注</string>
    <string name="goods_count">%1$s件作品</string>

    <string name="home_footer_1">戳</string>
    <string name="home_footer_2">“买艺术”</string>
    <string name="home_footer_3">精彩更有料</string>

    <string name="login">登录</string>
    <string name="login_phone">手机登录</string>
    <string name="login_pwd">密码登录</string>

    <string name="title_home">首页</string>
    <string name="title_art">买艺术</string>
    <string name="title_exhibition">租艺术</string>
    <string name="title_finance">享艺术</string>
    <string name="title_user">个人中心</string>

    <string name="user_order">我的订单</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_history">浏览记录</string>
    <string name="user_admin">管理商品</string>

    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="editor">编辑</string>
    <string name="sure">确定</string>

    <string name="login_register">登录/注册</string>
    <string name="username">手机号</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="sure_bind">确定绑定</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_again">重新发送</string>
    <string name="seconds">(%1$s)重新发送</string>
    <string name="code_empty_hint">请输入验证码</string>
    <string name="phone_empty_hint">请输入手机号</string>
    <string name="password_empty_hint">请输入密码</string>
    <string name="password_short_hint">密码太短！</string>
    <string name="password_length_hint">密码过长！</string>
    <string name="register">注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="email_hint">邮箱地址</string>
    <string name="phone_bind">手机绑定</string>
    <string name="phone_bind_already">手机已绑定</string>

    <string name="success_register">注册成功！</string>
    <string name="user_already_register">用户已注册！</string>
    <string name="success_login">登录成功！</string>
    <string name="error_login">用户名密码错误</string>
    <string name="success_code_send_hint">短信已下发,请注意查收！</string>
    <string name="success_bind">绑定成功！</string>
    <string name="error_bind">绑定失败！</string>
    <string name="success_add">添加成功！</string>
    <string name="error_add">添加失败,请重试！</string>
    <string name="success_update">更新成功！</string>
    <string name="error_update">更新失败,请重试！</string>
    <string name="success_attention">收藏成功！</string>
    <string name="cancel_attention">取消收藏！</string>
    <string name="success_add_cart">加入购物车</string>
    <string name="success_delete">删除成功！</string>
    <string name="success_error">删除失败！</string>

    <string name="title_address_manager">地址管理</string>
    <string name="address_name">*&#160;收&#160;&#160;货&#160;&#160;人：</string>
    <string name="address_phone">*&#160;联系方式：</string>
    <string name="address_detail">*&#160;详细地址：</string>
    <string name="address_district">*&#160;所在区域：</string>
    <string name="address_name_empty_hint">请输入收货人姓名</string>
    <string name="phone_error_hint">请输入正确手机号</string>
    <string name="address_district_empty_hint">请选择所在地区</string>
    <string name="address_detail_empty_hint">请填写详细地址</string>
    <string name="address_default">默认地址</string>
    <string name="address_add">新增收货地址</string>
    <string name="address_update">更新收货地址</string>

    <string name="setting">设置</string>
    <string name="dialog_hint">提示</string>
    <string name="push_switch">消息推送</string>
    <string name="clear_cache">清除缓存</string>
    <string name="success_clear">清除成功</string>
    <string name="quit_login">退出登录</string>
    <string name="quit_login_hint">确定退出登录么?</string>

    <string name="rmb">¥%1$s</string>
    <string name="rmb_reduce">-¥%1$s</string>
    <string name="goods_artist_size">%1$s | %2$sx%3$scm</string>
    <string name="goods_size">%1$sx%2$scm</string>

    <string name="cart">购物车</string>
    <string name="cart_buy">艺术品购买</string>
    <string name="cart_exhibition">艺术品租赁</string>


    <string name="preview">预览</string>
    <string name="collect">收藏</string>

    <string name="goods_one_size">%1$s | %2$sx%3$scm</string>
    <string name="goods_two_size">%1$s | %2$s | %3$sx%4$scm</string>
    <string name="goods_mount_size">装裱尺寸：%1$sx%2$scm</string>
    <string name="goods_mount_default">装裱状态：未装裱</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>

    <string name="select_all">全选</string>
    <string name="check_number">结算(%1$d)</string>
    <string name="delete_number">删除(%1$d)</string>
    <string name="cart_total">总金额：¥%1$d</string>
    <string name="hint_goods_in_cart">购物车中已存在！</string>
    <string name="cart_submit_empty">请选择商品</string>
    <string name="load_all">已加载全部</string>


    <string name="order_need_pay">待付款金额：¥%1$s</string>
    <string name="order_submit">提交订单</string>
    <string name="address_empty_hint">暂无地址信息，快去添加吧！</string>
    <string name="address_name_phone">%1$s %2$s</string>
    <string name="delivery_type">配送方式</string>
    <string name="delivery_fee">快递 ¥%1$d</string>
    <string name="invoice">发票</string>
    <string name="invoice_default">不开发票</string>
    <string name="goods_number">共%1$d件</string>

    <string name="order_list">订单列表</string>
    <string name="order_status_un_pay">待付款</string>
    <string name="order_status_need_send">待发货</string>
    <string name="order_status_need_receive">待收货</string>
    <string name="order_status_complete">已完成</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_pay_now">立即支付</string>
    <string name="order_receive">确认收货</string>
    <string name="order_logistics">查看物流</string>
    <string name="pay_error">支付失败!</string>

    <string name="order_detail">订单详情</string>
    <string name="address_empty">请选择地址信息!</string>

    <string name="order_sn">订单编号：%1$s</string>
    <string name="order_create_time">创建时间：%1$s</string>
    <string name="order_pay_time">支付时间：%1$s</string>
    <string name="order_finish_time">完成时间：%1$s</string>

    <string name="order_address_info">收货信息</string>
    <string name="order_logistics_info">物流信息</string>
    <string name="order_goods_info">商品信息</string>
    <string name="order_basic_info">基本信息</string>
    <string name="order_fee_info">费用信息</string>
    <string name="order_send_type">配送方式</string>
    <string name="send_type1">快递配送</string>
    <string name="send_type2">自提</string>
    <string name="pay_type">支付方式</string>
    <string name="invoice_info">发票信息</string>

    <string name="order_goods_price">商品总价</string>
    <string name="order_logistics_price">物流费用</string>
    <string name="order_need_price">待支付金额:¥%1$s</string>

    <string name="loading">加载中</string>
    <string name="empty_title">暂无数据</string>
    <string name="empty_content">去其他地方逛逛吧！</string>

    <string name="scan">扫一扫</string>
    <string name="scan_text">将条码/二维码放入框内，即可自动扫描</string>
    <string name="scan_link_hint">可能存在风险，是否要打开此链接?</string>
    <string name="open_link">打开链接</string>

    <string name="hint">提示</string>
    <string name="sure_delete">是否删除该数据?</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
