<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_top_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_bd_black_trans"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/username"
            android:inputType="phone"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/color_66"
            android:textColorHint="@color/color_cc"
            android:textSize="14sp" />

        <View style="@style/line_i" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLines="1"
                android:paddingEnd="6dp"
                android:paddingLeft="16dp"
                android:paddingRight="6dp"
                android:paddingStart="16dp"
                android:maxLength="6"
                android:textColor="@color/color_66"
                android:textColorHint="@color/color_cc"
                android:textSize="14sp" />

            <View
                android:layout_width="@dimen/common_line_i"
                android:layout_height="match_parent"
                android:background="@color/color_e1" />

            <TextView
                android:id="@+id/tv_phone_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/color_66"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_bind_phone"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/sure_bind"
        android:textColor="@android:color/white" />
</LinearLayout>