<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_f4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@mipmap/ic_hand" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/home_footer_1"
            android:textColor="@color/color_22"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_fragment_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/home_footer_2"
            android:textColor="@color/color_22"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/home_footer_3"
            android:textColor="@color/color_22"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>