<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_white_cornor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/hint"
        android:textColor="@color/color_66"
        android:textSize="16sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textColor="@color/color_99" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_i"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_dialog_left"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />

        <View
            android:layout_width="@dimen/common_line_i"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <Button
            android:id="@+id/bt_dialog_right"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/sure"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>